# foremast-utils

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  RELEASING.rst  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: codeql-analysis.yml
.github/workflows/: githubactions-pypipublish.yml  githubactions-tox.yml  publish.yml  test-and-publish.yml  test.yml
_docs/: conf.py  index.rst
src/foremastutils/: formats.py  generator.py  parser.py
tests/: test_formats.py  test_generator.py  test_parser.py
